--- a/fyndiqmerchant/backoffice/frontend/css/style.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/style.scss
@@ -1,4 +1,7 @@
 
+// If you're wondering why a lot of things are prefixed with 'fm-'
+// it's because PrestaShop defines style for lots of common words like 'error' and 'info'
+
 @mixin gradient($color1, $color2) {
     // http://www.colorzilla.com/gradient-editor/
     background: $color1;
@@ -99,6 +102,68 @@
         height: 128px;
         display: block;
         margin: 150px auto;
+    }
+}
+
+.fm-message-overlay {
+
+    // http://www.red-team-design.com/cool-notification-messages-with-css3-jquery
+    background-size: 40px 40px;
+    background-image: linear-gradient(135deg, rgba(255, 255, 255, .05) 25%, transparent 25%,
+        transparent 50%, rgba(255, 255, 255, .05) 50%, rgba(255, 255, 255, .05) 75%,
+        transparent 75%, transparent);
+    box-shadow: inset 0 -1px 0 rgba(255,255,255,.4);
+    width: 100%;
+    border: 1px solid;
+    color: white;
+    padding: 30px 0;
+    position: fixed;
+    z-index: 999;
+    top: 0;
+    left: 0;
+    _position: absolute;
+    text-shadow: 0 1px 0 rgba(0,0,0,.5);
+    animation: animate-bg 5s linear infinite;
+
+    &.fm-info {
+         background-color: #4ea5cd;
+         border-color: #3b8eb5;
+    }
+    &.fm-error {
+        background-color: #de4343;
+        border-color: #c43d3d;
+    }
+    &.fm-warning {
+        background-color: #eaaf51;
+        border-color: #d99a36;
+    }
+    &.fm-success {
+        background-color: #61b832;
+        border-color: #55a12c;
+    }
+
+    .close {
+        display: block;
+        position: absolute;
+        top: 15px;
+        right: 15px;
+        width: 30px;
+        height: 30px;
+        cursor: pointer;
+    }
+
+    h3 {
+        width: 920px;
+        margin: 0 auto 5px;
+        color: white;
+        font-size: 16px;
+    }
+
+    p {
+        width: 920px;
+        margin: 0 auto;
+        color: white;
+        font-size: 14px;
     }
 }
 
