--- a/fyndiqmerchant/backoffice/frontend/css/style.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/style.scss
@@ -316,6 +316,9 @@
             &.inactive {
                 opacity: 0.2;
                 filter: alpha(opacity=20);
+                a {
+                    cursor: default;
+                }
             }
         }
     }
