--- a/fyndiqmerchant/backoffice/frontend/css/style.css
+++ b/fyndiqmerchant/backoffice/frontend/css/style.css
@@ -71,9 +71,9 @@
 
 .fm-loading-overlay {
   background: black;
-  background: rgba(0, 0, 0, 0.8);
-  -ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#CC000000, endColorstr=#CC000000);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#CC000000, endColorstr=#CC000000);
+  background: rgba(0, 0, 0, 0.4);
+  -ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#66000000, endColorstr=#66000000);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#66000000, endColorstr=#66000000);
   position: absolute;
   width: 100%;
   height: 100%;
@@ -83,6 +83,30 @@
     height: 128px;
     display: block;
     margin: 150px auto; }
+
+.fm-modal-overlay {
+  background: black;
+  background: rgba(0, 0, 0, 0.4);
+  -ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#66000000, endColorstr=#66000000);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#66000000, endColorstr=#66000000);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 999; }
+  .fm-modal-overlay .container {
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    background: #e8e8e8;
+    border: 1px solid #484848;
+    width: 600px;
+    margin: 50px auto;
+    padding: 10px; }
+    .fm-modal-overlay .container h3 {
+      font-size: 18px; }
+    .fm-modal-overlay .container .content {
+      min-height: 200px;
+      font-size: 14px; }
 
 .fm-message-overlay {
   background-size: 40px 40px;
