--- a/fyndiqmerchant/backoffice/frontend/css/style.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/style.scss
@@ -20,6 +20,12 @@
     border-radius: $x;
 }
 
+@mixin box-shadow($x, $y, $blur, $spread, $color) {
+    -moz-box-shadow:    $x $y $blur $spread $color;
+    -webkit-box-shadow: $x $y $blur $spread $color;
+    box-shadow:         $x $y $blur $spread $color;
+}
+
 @mixin overlay() {
     // http://robertnyman.com/2010/01/11/css-background-transparency-without-affecting-child-elements-through-rgba-and-filters/
     background: rgb(0, 0, 0);
@@ -113,6 +119,7 @@
 
     .container {
         @include border-radius(4px);
+        @include box-shadow(0px, 0px, 6px, 3px, #555);
 
         background: #e8e8e8;
         border: 1px solid #484848;
@@ -190,6 +197,48 @@
         margin: 0 auto;
         color: white;
         font-size: 14px;
+    }
+}
+
+.fm-accept-product-export {
+    ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+
+        > li {
+            overflow: hidden;
+            background-color: #f5f5f5;
+            margin-bottom: 2px;
+            padding: 2px;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+
+            .image {
+                float: left;
+                width: 25px;
+                height: 25px;
+
+                img {
+                    display: block;
+                    margin: 0 auto;
+                    max-width: 25px;
+                    max-height: 25px;
+                }
+            }
+            .name {
+                float: left;
+                margin-left: 3px;
+            }
+            .highest-price {
+                float: left;
+            }
+            .lowest-price {
+                float: left;
+            }
+        }
     }
 }
 
