--- a/fyndiqmerchant/backoffice/frontend/css/layout.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/layout.scss
@@ -1,4 +1,46 @@
 
+.fm-accept-product-export {
+    ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+
+        > li {
+            overflow: hidden;
+            background-color: #f5f5f5;
+            margin-bottom: 2px;
+            padding: 2px;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+
+            .image {
+                float: left;
+                width: 25px;
+                height: 25px;
+
+                img {
+                    display: block;
+                    margin: 0 auto;
+                    max-width: 25px;
+                    max-height: 25px;
+                }
+            }
+            .name {
+                float: left;
+                margin-left: 3px;
+            }
+            .highest-price {
+                float: left;
+            }
+            .lowest-price {
+                float: left;
+            }
+        }
+    }
+}
+
 #fm-container {
     position: relative;
     width: 920px;
@@ -9,10 +51,6 @@
         display: block;
         margin: 10px auto;
         width: 160px;
-    }
-
-    label {
-        width: auto;
     }
 }
 
@@ -68,13 +106,14 @@
 .fm-product-list {
     margin: 0;
     padding: 2px;
-    background-color: #e5e5e5;
 
     > li {
         overflow: hidden;
         background-color: #f5f5f5;
-        margin-bottom: 3px;
+        margin-bottom: 5px;
         padding: 3px;
+        border: 1px solid #757575;
+        border-left: 2px solid #757575;
 
         &:last-child {
             margin-bottom: 0;
@@ -177,13 +216,16 @@
 
         > li {
             overflow: hidden;
-            margin-bottom: 1px;
-            padding: 1px;
-            background: #e5e5e5;
+            padding: 3px 0;
+            border-bottom: 1px solid #ccc;
+
+            &:last-child {
+                border: none;
+            }
 
             .select {
                 float: left;
-                margin: 10px 5px 0;
+                margin: 8px 5px 0;
             }
 
             .image {
@@ -197,6 +239,12 @@
                     max-width: 30px;
                     max-height: 30px;
                 }
+            }
+
+            .data {
+                float: left;
+                margin-left: 5px;
+                width: 550px;
             }
         }
     }
