--- a/fyndiqmerchant/backoffice/frontend/css/overlays.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/overlays.scss
@@ -15,10 +15,10 @@
 
     .container {
         @include border-radius(4px);
-        @include box-shadow(0px, 0px, 6px, 3px, #555);
+        @include box-shadow(0px, 0px, 6px, 3px, $color-modal-dark);
 
-        background: #e8e8e8;
-        border: 1px solid #484848;
+        background: $color-modal-light;
+        border: 1px solid $color-modal-darker;
         width: 600px;
         margin: 50px auto;
         padding: 10px;
