--- a/fyndiqmerchant/backoffice/frontend/css/style.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/style.scss
@@ -6,6 +6,24 @@
         width: auto;
         text-align: left;
     }
+
+    p {
+        margin: 8px 0;
+        padding: 0;
+    }
+}
+
+.fm-form {
+    margin: 20px 0;
+    padding: 0;
+
+    fieldset {
+        padding: 0 10px 10px 10px;
+    }
+
+    div {
+        overflow: hidden;
+    }
 }
 
 .fm-button::-moz-focus-inner {
@@ -39,13 +57,5 @@
         &:active {
             @include gradient($color-button-fyndiq-dark, $color-button-fyndiq-light);
         }
-    }
-}
-
-.fm-form {
-    margin: 20px 0;
-
-    div {
-        overflow: hidden;
     }
 }
