Moving overly broad css

--- a/fyndiqmerchant/backoffice/frontend/css/layout.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/layout.scss
@@ -153,6 +153,7 @@
     }
     .product {
         position: relative;
+        overflow: hidden;
 
         .title {
             margin-bottom: 5px;
