--- a/fyndiqmerchant/backoffice/frontend/css/style.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/style.scss
@@ -1,14 +1,37 @@
 
 #fm-container {
-    label {
-        margin: 0;
-        padding: 0;
-        width: auto;
-        text-align: left;
-    }
     p {
         margin: 8px 0;
         padding: 0;
+    }
+
+    h1, h2, h3, h4, h5, h6 {
+        margin: 0;
+        padding: 0;
+    }
+    h1 {
+        margin-top: 12px;
+        font-size: 22px;
+    }
+    h2 {
+        margin-top: 10px;
+        font-size: 20px;
+    }
+    h3 {
+        margin-top: 8px;
+        font-size: 18px;
+    }
+    h4 {
+        margin-top: 6px;
+        font-size: 16px;
+    }
+    h5 {
+        margin-top: 4px;
+        font-size: 14px;
+    }
+    h6 {
+        margin-top: 2px;
+        font-size: 12px;
     }
 }
 
@@ -20,6 +43,13 @@
         padding: 0 10px 10px 10px;
     }
 
+    label {
+        margin: 0;
+        padding: 0;
+        width: auto;
+        text-align: left;
+        float: none;
+        font-weight: normal;
     }
 }
 
